2011-06-24  Jessie Berlin  <jberlin@apple.com>

        REGRESSION (r89657): http/tests/inspector/extensions-headers.html,
        http/tests/inspector/extensions-resources-redirect.html timing out on SnowLeopard Intel
        Release (WebKit2 Tests).
        https://bugs.webkit.org/show_bug.cgi?id=63325

        Skip those tests to get the bots green.

        * platform/mac-wk2/Skipped:

2011-06-24  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt][WK2] fast/frames/iframe-plugin-load-remove-document-crash.html crashes
        https://bugs.webkit.org/show_bug.cgi?id=63321

        * platform/qt-wk2/Skipped: Skip fast/frames/iframe-plugin-load-remove-document-crash.html until fix.

2011-06-24  Balazs Kelemen  <kbalazs@webkit.org>

        Unreviewed.
        Remove non-existent items from the qt-wk2 skipped list.

        * platform/qt-wk2/Skipped:

2011-06-24  Kent Tamura  <tkent@chromium.org>

        Reviewed by Dimitri Glazkov.

        Clean up some tests for search cancel buttons.
        https://bugs.webkit.org/show_bug.cgi?id=63121

        - Introduce a function to retrieve a reliable position of a search
          cancel button.
        - Convert two tests to dumpAsText().

        * fast/forms/resources/common.js:
        (searchCancelButtonPosition): Added.
        * fast/forms/search-abs-pos-cancel-button.html: Use searchCancelButtonPosition().
        * fast/forms/search-cancel-button-mouseup.html: Use searchCancelButtonPosition().
        * fast/forms/search-transformed-expected.txt: Added.
        * fast/forms/search-transformed.html:
          - Use searchCancelButtonPosition().
          - Convert to dumpAsText().
        * fast/forms/search-zoomed-expected.txt: Added.
        * fast/forms/search-zoomed.html:
          - Use searchCancelButtonPosition().
          - Convert to dumpAsText().
        * platform/chromium/test_expectation.txt:
          search-transformed.html should pass.